# ScreenBox-FE

./: .gitignore  .gitmoduleddd  .gitmodules  .travis.yml  CHyperSpinDatabase.cpp  CMakeLists.txt  README.md  ScreenBox.pro  ScreenFlow.pro  SplashScreen.qml  Wheel.qml  build_lib.sh  main.qml  qml.qrc
lib/: build_ffmpeg.sh
old/: CHyperSpinDatabase.hpp  Clock.qml  HyperSpinTheme.qml  HyperSpinWheel.qml  MainForm.ui.qml  NotificationBar.qml  PlatformList.qml  README.md  README.txt  Wheel.qml  appveyor.yml
resources/: resources.qrc
resources/osx/: Info.plist  logo.hqx  logo.icns
resources/qml/: CoverflowScene.qml  ExitMenu.qml  GridScene.qml  IntroScene.qml  MenuScene.qml  Network.js  Special.qml  Utils.js  Wheel.qml  WheelItem.qml  WheelScene.qml  main.qml
resources/xsd/: mainMenu.xsd  systemMenu.xsd
src/: CFranchise.cpp  CGenre.cpp  CHyperSpinTheme.cpp  CHyperSpinThemeArtwork.hpp  CHyperSpinThemeMedia.hpp  CHyperSpinThemeParticle.hpp  CHyperSpinThemeVideo.cpp  CHyperSpinThemeVideo.hpp  CManufacturer.hpp  CPlatform.hpp  CRegion.cpp  CRegion.hpp  CRom.hpp  CSystem.hpp  Frontend.cpp  Frontend.h  Frontend.hpp  IniParser.hpp  XmlParser.hpp  main.cpp
src/core/: CDescription.hpp  CDeveloper.cpp  CDeveloper.hpp  CFranchise.cpp  CFranchise.hpp  CGame.cpp  CGame.hpp  CGenre.cpp  CGenre.hpp  CHyperSpin.cpp  CHyperSpin.hpp  CHyperSpinTheme.cpp  CHyperSpinTheme.hpp  CHyperSpinThemeArtwork.cpp  CHyperSpinThemeArtwork.hpp  CHyperSpinThemeMedia.cpp  CHyperSpinThemeMedia.hpp  CHyperSpinThemeParticle.cpp  CHyperSpinThemeParticle.hpp  CManufacturer.cpp  CManufacturer.hpp  CPlatform.cpp  CPlatform.hpp  CPlatformGame.hpp  CRocketLauncher.cpp  CRocketLauncher.hpp  CRom.cpp  CRom.hpp  CSystem.cpp  Frontend.cpp  Frontend.hpp  IntroScene.cpp  IntroScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MenuScene.cpp  MenuScene.hpp  Wheel.cpp  Wheel.hpp  settings.cpp  (+1 more)
src/databases/: GameDatabase.cpp  GameDatabase.h  SystemDatabase.cpp  SystemDatabase.h
src/qml/: QuickFrontend.cpp  QuickFrontend.h  QuickProcess.cpp  QuickProcess.h  QuickScene.cpp  QuickScene.h  QuickSettings.cpp  QuickSettings.h  QuickWheel.cpp  QuickWheel.h
src/settings/: AppSettings.cpp  AppSettings.h  MenuSettings.cpp  MenuSettings.h  Settings.cpp  Settings.h  SystemSettings.cpp  SystemSettings.h
src/utils/: AppIntegrity.cpp  AppIntegrity.h  FFmpeg.h  IniParser.cpp  IniParser.hpp  Logger.cpp  Logger.hpp  XmlParser.cpp  XmlParser.hpp  actionscriptkeys.h  (+2 more)
(+47 files in other folders)
